[gd_scene load_steps=4 format=3 uid="uid://dk3no87nfpp8i"]

[ext_resource type="Script" path="res://source/match/hud/unit-menus/AircraftFactoryMenu.gd" id="1_l3uuu"]
[ext_resource type="Texture2D" uid="uid://cffcxtqooabct" path="res://assets/ui/icons/Helicopter.png" id="2_5aqxt"]
[ext_resource type="Texture2D" uid="uid://cjtwt8jdvjor7" path="res://assets/ui/icons/Drone.png" id="3_xeg5w"]

[node name="AircraftFactoryMenu" type="GridContainer"]
columns = 4
script = ExtResource("1_l3uuu")

[node name="Padding" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding2" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding3" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding5" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding6" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding7" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding8" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding9" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding10" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding11" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding12" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding13" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="ProduceHelicopterButton" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "H"

[node name="TextureRect" type="TextureRect" parent="ProduceHelicopterButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_5aqxt")
expand_mode = 1

[node name="ProduceDroneButton" type="Button" parent="."]
layout_mode = 2
focus_mode = 0
text = "D"

[node name="TextureRect" type="TextureRect" parent="ProduceDroneButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_xeg5w")
expand_mode = 1

[node name="Padding15" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[node name="Padding16" type="Control" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2

[connection signal="pressed" from="ProduceHelicopterButton" to="." method="_on_produce_helicopter_button_pressed"]
[connection signal="pressed" from="ProduceDroneButton" to="." method="_on_produce_drone_button_pressed"]
